# tinycoro

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: echo_server.cpp  http_echo.cpp
include/tinycoro/: buffer.h  coroutine.h  coroutine_pool.h  event_loop.h  http_parser.h  queue.h  scheduler.h  tcp_connection.h  tcp_server.h  thread_pool.h
src/: coroutine.cpp  coroutine_pool.cpp  event_loop.cpp  http_parser.cpp  scheduler.cpp  tcp_connection.cpp  tcp_server.cpp  thread_pool.cpp
tests/: test_coroutine.cpp  test_http.cpp  test_pool.cpp  test_queue.cpp
